Fixed page-specific overflow, modified section texts, fixed dot-selector position and css

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,11 +1,3 @@
-.homepage-body {
-    padding: 0;
-    height: 100%;
-    margin: 0;
-    overflow: hidden;
-    scroll-behavior: smooth;
-}
-
 .homepage-container {
     display: flex;
     height: 100vh;
@@ -19,13 +11,6 @@
 
 .sidebar-closed {
     transform: translateX(80px);
-}
-
-.home-section-header {
-    position: relative;
-    bottom: 42%;
-    text-align: center;
-    font-size: 38px;
 }
 
 .sections-container {
@@ -42,13 +27,13 @@
 
 .sections-container #section-0 #section-0-header {
     text-align: center;
-    font-size: 38px;
+    font-size: 45px;
     margin: 10px 0 20px;
 }
 
 .sections-container #section-0 #section-0-paragraph {
     text-align: center;
-    font-size: 20px;
+    font-size: 24px;
     margin: 0 0 20px;
 }
 
@@ -80,7 +65,7 @@
 .sections-container #section-1 #section-1-paragraph {
     text-align: center;
     margin: 0 auto;
-    line-height: 35px;
+    line-height: 40px;
     font-size: 22px;
     width: 80%;
 }
@@ -107,7 +92,7 @@
     gap: 40px;
     width: 80%;
     margin: 0 auto;
-    font-size: 20px;
+    font-size: 21px;
 }
 
 .sections-container #section-2 #section-2-tools-list-link {
@@ -235,20 +220,33 @@
     transform: translateY(0);
 }
 
-.dot-selector {
+.home-dot-selector {
     position: fixed;
     right: 30px;
     top: 50%;
     transform: translateY(-50%);
     display: flex;
     flex-direction: column;
+    z-index: 10000;
 }
 
 .dot {
     width: 12px;
     height: 12px;
-    background-color: #ccc;
+    background-color: #333;
     border-radius: 50%;
+    border: 2px solid #fff;
+    margin: 8px 0;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.dot.active-dot {
+    width: 12px;
+    height: 12px;
+    background-color: #fff;
+    border-radius: 50%;
+    border: 2px solid #333;
     margin: 8px 0;
     cursor: pointer;
     transition: background-color 0.3s ease;
